--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body data-bs-spy="scroll" data-bs-target=".navbar">
     <nav id="overview" class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="images/logo.png" id="logo"> </a>
+            <a class="navbar-brand" href="https://mrbuckle.github.io/UX_UI_HW_19/"><img src="images/logo.png" id="logo"> </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -67,7 +67,7 @@
                 <p> 2. Develop responsive redesign for desktop and mobile that provide solutions to navigation, and engagment issues.<br>
                     <h5>(University of Toronto UX/UI Bootcamp Project)</h5>
                 </p>
-                <a class="btn btn-primary btn-lg" href="#" role="button">Try Out Prototype</a>
+                <a class="btn btn-primary btn-lg" href="#tryPrototypeLink" role="button">Try Out Prototype</a>
             </div>
         </div>
         <div class="sectionDivide1"></div>
@@ -352,26 +352,29 @@
         <section id="redesignSection">
 
             <div class="flexContainer flexContainer--column">
-                <h1 id="redesignHead">2. Design</h1>
+                <a id="wireframeLink">
+                    <h1 id="redesignHead">2. Design</h1>
+                </a>
                 <img src="images/redesign process.svg">
             </div>
-            <a id="wireframeLink">
-                <h3 class="sectionHeading hStyleRed">2.1 wireframe</h3>
-            </a>
+
             <div class="contentContainer flexContainer">
 
                 <div class="flexContainer flexContainer--column container--txtWrap--narrow">
                     <h3 class="hStyleRed">Design Process</h3>
-                    <p>loreum iosos </p>
-                    <p>loreum iosos </p>
+                    <p> Our <span class="boldTxt hStyleRed">Design Process</span>involved several stages moving from <span class="boldTxt hStyleRed">Lo-fidelity</span> to <span class="boldTxt hStyleRed">Hi-fidelity</span>. In each stage of the design process,
+                        building from our research phase, our evolving design solutions were <span class="boldTxt hStyleRed">Tested</span>, evaluated and <span class="boldTxt hStyleRed">Iterated</span> upon to ensure they <span class="boldTxt hStyleRed">addressed</span>
+                        <span class="boldTxt hStyleRed">priority/goal</span> and
+                        <span class="boldTxt hStyleRed">impact indicators</span> we had established. Our <span class="boldTxt hStyleRed">Wireframe</span>,<span class="boldTxt hStyleRed">Prototype</span> and design <span class="boldTxt hStyleRed">Solution</span>                        stages only moved forward from lo-fi and mid-level to Hi-fi by <span class="boldTxt hStyleRed">Testing and Iteration</span>. Testing in our design phase involved both in-team testing and remote usability testing with users. These
+                        steps were <span class="boldTxt hStyleRed">key to</span> the development of our <span class="boldTxt hStyleRed">redesign</span>.
+                    </p>
+
                 </div>
-                <div class="container--txtWrap--narrow imgWrap--narrow50">
-                    <img src="images/gif cbc Desktop wireframe.gif">
-                </div>
+
             </div>
             <div class="sectionDivide2"></div>
+            <h2 class="sectionHeading hStyleRed">2.1 wireframe</h2>
             <div class="contentContainer flexContainer">
-
                 <div class="flexContainer flexContainer--column container--txtWrap--narrow">
                     <h3 class="hStyleRed">Lo-fi to Hi-fi Wireframing</h3>
                     <p>After developing iterated versions of navigation and primary UI elements our team completed Lo-fi and Hi-Fi wireframes through analysis, iteration and testing for both desktop and mobile. </p>
@@ -539,6 +542,16 @@
                 <div class="flexContainer flexContainer--column container--txtWrap--narrow">
                     <h3 class="hStyleRed">Next Steps</h3>
                     <p>Continued A/B testing and iterations Continue to iterate site map Continue to iterate webcard layouts to find more appealing solution to highlighting content and different media types </p>
+                </div>
+            </div>
+            <div class="flexContainer flexContainer--column">
+                <a id="tryPrototypeLink">
+                    <h3 class="txtCenter hStyleRed">Try Prototype</h3>
+                </a>
+                <p class="txtCenter">Try our hi-fi prototype developed using Figma. Flow 1 for desktop. Flow 2 for Mobile.</p>
+                <div class="txtCenter">
+                    <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FZ3QYpnOec8P8egtYxEdlRe%2Ffinal-V.3-CBC-RADIO-CCANADA-PROTOTYPE-(HI-FI)%3Fnode-id%3D966%253A51496%26scaling%3Dscale-down%26page-id%3D0%253A1%26starting-point-node-id%3D966%253A51496%26show-proto-sidebar%3D1"
+                        allowfullscreen></iframe>
                 </div>
             </div>
         </section>
