--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <div class="jumboCopy">
                 <h1>CBC Radio-Canada</h1>
                 <h3>About</h3>
-                <p>CBC Radio-Canada is a govenment agency website with the goal of informing, Enlightenling and Entertaining Canadians. </p>
+                <p>CBC Radio-Canada is a Government agency website with the goal of informing, Enlightening and Entertaining Canadians. </p>
                 <h3>Goals</h3>
                 <p>1. Identify difficulties potential users experience navigating and interacting with the website on desktop and mobile.</p>
                 <p> 2. Develop responsive redesign for desktop and mobile that provide solutions to navigation, and engagment issues.<br>
