--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body data-bs-spy="scroll" data-bs-target=".navbar">
     <nav id="overview" class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="https://mrbuckle.github.io/19_test/"><img src="images/kbdesign_mtrdlogo_88pxl.png" id="logo"> </a>
+            <a class="navbar-brand" href="http://kevinbuckle.work"><img src="images/kbdesign_mtrdlogo_88pxl.png" id="logo"> </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
